Food Management and Cost Management Implemented

--- a/EmployeeMG.WebApp/Views/Shared/_Layout.cshtml
+++ b/EmployeeMG.WebApp/Views/Shared/_Layout.cshtml
@@ -254,8 +254,50 @@
                                         </a>
                                     </li>
                                 </ul>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="/Cost/Index" class="nav-link">
+                                            <i class="fa fa-circle-o nav-icon"></i>
+                                            <p>مدیریت هزینه ها</p>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             
+                            
+                            <li class="nav-item has-treeview">
+                                <a href="#" class="nav-link">
+                                    <i class="nav-icon fa fa-dashboard"></i>
+                                    <p>
+                                        تغذیه
+                                        <i class="right fa fa-angle-left"></i>
+                                    </p>
+                                </a>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="/Food/Index" class="nav-link">
+                                            <i class="fa fa-circle-o nav-icon"></i>
+                                            <p>مدیریت غذا ها</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="/Unit/Index" class="nav-link">
+                                            <i class="fa fa-circle-o nav-icon"></i>
+                                            <p>مدیریت واحد ها</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="/Employee/Index" class="nav-link">
+                                            <i class="fa fa-circle-o nav-icon"></i>
+                                            <p>مدیریت کارمندان</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
 
                         </ul>
                     </nav>
