--- a/EmployeeMG.WebApp/Views/Food/Index.cshtml
+++ b/EmployeeMG.WebApp/Views/Food/Index.cshtml
@@ -53,6 +53,8 @@
 
             <div class="col-lg-4">
                 <partial name="_Create" />
+                <br />
+                <partial name="Av" />
             </div>
 
         </div>
