food offered management

--- a/EmployeeMG.WebApp/Views/Cost/_Create.cshtml
+++ b/EmployeeMG.WebApp/Views/Cost/_Create.cshtml
@@ -20,7 +20,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label>در تاریخ</label>
-                    <input id="CostDate" name="CostDate" class="form-control persianDateInput">
+                    <input id="CostDate" placeholder="به تاریخ" name="CostDate" class="form-control persianDateInput">
                 </div>
             </div>
             <div class="col-md-3">
