--- a/EmployeeMG.WebApp/Views/Shared/_Layout.cshtml
+++ b/EmployeeMG.WebApp/Views/Shared/_Layout.cshtml
@@ -283,17 +283,17 @@
                                 </ul>
                                 <ul class="nav nav-treeview">
                                     <li class="nav-item">
-                                        <a href="/Unit/Index" class="nav-link">
+                                        <a href="/Food/IndexnutCard" class="nav-link">
                                             <i class="fa fa-circle-o nav-icon"></i>
-                                            <p>مدیریت واحد ها</p>
+                                            <p>مدیریت کارت تغدیه</p>
                                         </a>
                                     </li>
                                 </ul>
                                 <ul class="nav nav-treeview">
                                     <li class="nav-item">
-                                        <a href="/Employee/Index" class="nav-link">
+                                        <a href="/Food/GetAllFoodOffered" class="nav-link">
                                             <i class="fa fa-circle-o nav-icon"></i>
-                                            <p>مدیریت کارمندان</p>
+                                            <p>مدیریت غذاهای ارائه شده</p>
                                         </a>
                                     </li>
                                 </ul>
