--- a/EmployeeMG.WebApp/Views/Food/Av.cshtml
+++ b/EmployeeMG.WebApp/Views/Food/Av.cshtml
@@ -12,22 +12,20 @@
         <!-- text input -->
         <div class="form-group">
             <label>عدد اول</label>
-            <input type="number" id="number1" class="form-control" placeholder="وارد کنید">
+            <input type="number" onchange="send()" id="number1" class="form-control" placeholder="وارد کنید">
         </div>
         <div class="form-group">
             <label>عدد دوم</label>
-            <input type="number" id="number2" class="form-control" placeholder="وارد کنید">
+            <input type="number" onchange="send()" id="number2" class="form-control" placeholder="وارد کنید">
         </div>
         <div class="form-group">
             <label>عدد سوم</label>
-            <input type="number" id="number3" class="form-control" placeholder="وارد کنید">
+            <input type="number" onchange="send()" id="number3" class="form-control" placeholder="وارد کنید">
         </div>
         <div class="form-group">
             <label>نتیجه</label>
             <label id="resul" class="form-control">0</label>
         </div>
-
-        <button type="button" onclick="send()" class="btn btn-success">محاسبه میانگین</button>
     </div>
     <!-- /.card-body -->
 </div>
@@ -35,6 +33,8 @@
 <script>
 
     function send() {
+
+
         SendData('/Food/Av', { number1: $("#number1").val(), number2: $("#number2").val(), number3: $("#number3").val() }, function (res) {
             $('#resul').text(res);
         });
