--- a/EmployeeMG.WebApp/Views/Food/IndexnutCard.cshtml
+++ b/EmployeeMG.WebApp/Views/Food/IndexnutCard.cshtml
@@ -1,9 +1,9 @@
 ﻿
-@model EmployeeMG.Core.ApplicationContract.Cost.ListCost
+@model EmployeeMG.Core.ApplicationContract.Food.ListNUTritionCard
 
 @{
     Layout = "_Layout";
-    ViewData["Tit"] = "مدیریت هزینه ها";
+    ViewData["Tit"] = "مدیریت کارت تغذیه";
 }
 
 
@@ -11,20 +11,20 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <partial name="_Create" />
+                <partial name="_CreateNUTCard" />
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title mb-2 text-bold">مشاهده هزینه ها</h5>
+                        <h5 class="card-title mb-2 text-bold">مدیریت کارت تغذیه</h5>
                         <div id="example2_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <form id="mform" action="/Cost/Search" data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#Content">
+                                    <form id="mform" action="/Food/SearchNUT" data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#Content">
                                         <div id="Content">
-                                            <partial name="_Cost" model="@Model" />
+                                            <partial name="_NUTCard" model="@Model" />
                                         </div>
                                     </form>
 
@@ -39,43 +39,34 @@
     </div>
 </div>
 
-<script src="~/Admin/dist/js/persian-date.min.js"></script>
-<script src="~/Admin/dist/js/persian-datepicker.min.js"></script>
+
 @section js
 {
     <script>
-
-        $('.persianDateInput').persianDatepicker({
-            format: 'YYYY/MM/DD',
-            autoClose: true,
-            initialValue: false
-            /*initialValueType: "persian"*/
-        });
-
 
         function sendPage(pagenum) {
             $("#pageid").val(pagenum);
             $("#mform").submit();
         }
         function RefreshTable() {
-            $("#myTable").load("/Cost/Index #myTable");
+            $("#myTable").load("/Food/IndexnutCard #myTable");
             Close();
         }
 
-        function Edit(_ID) {
+        function AddBalance(_ID) {
 
-            LoadComponenet("/Cost/Edit/",
+            LoadComponenet("/Food/AddBalance/",
                 { ID: _ID },
                 function (res) {
                     $('body').append(res);
-                    $('#EditModal').modal();
+                    $('#AddBalanceModal').modal();
                 });
 
         }
 
         function Delete(_ID) {
 
-            RemoveData("/Cost/Delete/", { ID: _ID });
+            RemoveData("/Food/DeleteUNTCard/", { ID: _ID });
         }
 
     </script>
