--- a/EmployeeMG.WebApp/Views/Shared/_Layout.cshtml
+++ b/EmployeeMG.WebApp/Views/Shared/_Layout.cshtml
@@ -62,7 +62,7 @@
                                 <img src="dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 ml-3 img-circle">
                                 <div class="media-body">
                                     <h3 class="dropdown-item-title">
-                                        حسام موسوی
+                                        
                                         <span class="float-left text-sm text-danger"><i class="fa fa-star"></i></span>
                                     </h3>
                                     <p class="text-sm">با من تماس بگیر لطفا...</p>
@@ -78,7 +78,7 @@
                                 <img src="dist/img/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle ml-3">
                                 <div class="media-body">
                                     <h3 class="dropdown-item-title">
-                                        پیمان احمدی
+                                       
                                         <span class="float-left text-sm text-muted"><i class="fa fa-star"></i></span>
                                     </h3>
                                     <p class="text-sm">من پیامتو دریافت کردم</p>
@@ -94,7 +94,7 @@
                                 <img src="dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle ml-3">
                                 <div class="media-body">
                                     <h3 class="dropdown-item-title">
-                                        سارا وکیلی
+                                      
                                         <span class="float-left text-sm text-warning"><i class="fa fa-star"></i></span>
                                     </h3>
                                     <p class="text-sm">پروژه اتون عالی بود مرسی واقعا</p>
@@ -156,10 +156,10 @@
                     <!-- Sidebar user panel (optional) -->
                     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                         <div class="image">
-                            <img src="https://www.gravatar.com/avatar/52f0fbcbedee04a121cba8dad1174462?s=200&d=mm&r=g" class="img-circle elevation-2" alt="User Image">
+                            <img src="/Images/" class="img-circle elevation-2" alt="User Image">
                         </div>
                         <div class="info">
-                            <a href="#" class="d-block">حسام موسوی</a>
+                            <a href="#" class="d-block"></a>
                         </div>
                     </div>
 
@@ -298,6 +298,43 @@
                                     </li>
                                 </ul>
                             </li>
+                            
+                            
+                            <li class="nav-item has-treeview">
+                                <a href="#" class="nav-link">
+                                    <i class="nav-icon fa fa-dashboard"></i>
+                                    <p>
+                                       امانات
+                                        <i class="right fa fa-angle-left"></i>
+                                    </p>
+                                </a>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="/Goods/Index" class="nav-link">
+                                            <i class="fa fa-circle-o nav-icon"></i>
+                                            <p>مدیریت کالا ها</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="/Goods/GetAllLengingGoods" class="nav-link">
+                                            <i class="fa fa-circle-o nav-icon"></i>
+                                            <p>مدیریت کالاهای تحویلی</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="/Food/GetAllFoodOffered" class="nav-link">
+                                            <i class="fa fa-circle-o nav-icon"></i>
+                                            <p>مدیریت غذاهای ارائه شده</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            
+                            
 
                         </ul>
                     </nav>
@@ -326,7 +363,7 @@
                 Anything you want
             </div>
             <!-- Default to the left -->
-            <strong>CopyLeft &copy; 2018 <a href="http://github.com/hesammousavi/">حسام موسوی</a>.</strong>
+            <strong>نرم افزار مدیریت کارمندان <a href=""></a>.</strong>
         </footer>
     </div>
     <!-- ./wrapper -->
